fix container width bug on small phones

--- a/sass/defines/_grid.scss
+++ b/sass/defines/_grid.scss
@@ -36,7 +36,7 @@ html {
     --offset-small: 16px;
   }
   @include phone_xs{
-    --grid-margin:15px;
+    // --grid-margin:15px;
   }
 }
 
